# resumeforge

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  development-plan.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  test-plan-v1.md
.github/workflows/: ci-cd.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6e076e91ec57_init_all_tables.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  experiences.py  llm_configs.py  resumes.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  pagination.py  security.py
backend/app/models/: __init__.py  experience.py  llm_config.py  resume.py  user.py
backend/app/repositories/: __init__.py  base.py  experience_repository.py  llm_config_repository.py  resume_repository.py  user_repository.py
backend/app/schemas/: auth.py  experience.py  resume.py
backend/app/services/: __init__.py  auth_service.py  experience_service.py  llm_config_service.py  pdf_service.py  resume_service.py  user_service.py
backend/tests/: conftest.py  test_auth_service.py  test_common.py  test_experience_service.py  test_llm_config_service.py  test_resume_service.py
frontend/: .prettierrc  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: i18n.ts  middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/[locale]/: layout.tsx  page.tsx
frontend/src/app/[locale]/auth/login/: page.tsx
frontend/src/app/[locale]/auth/register/: page.tsx
frontend/src/app/[locale]/dashboard/: page.tsx
frontend/src/app/[locale]/experiences/: page.tsx
frontend/src/app/api/v1/[...path]/: route.ts
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/providers/: LocaleProvider.tsx  Providers.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Select.tsx  Skeleton.tsx  Tabs.tsx  Toast.tsx  index.ts
frontend/src/i18n/: routing.ts
frontend/src/lib/: api.ts  design-tokens.ts  utils.ts
frontend/src/messages/: en-US.json  zh-CN.json
frontend/tests/e2e/: auth.spec.ts  fixtures.ts  pages.spec.ts
nginx/: nginx.conf  nginx.prod.conf
scripts/: deploy.sh
